Update swagger documentation for missing methods
